# financial-data-pipeline-demo

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1bfe2a14f5f2_add_payroll_reconciliation.py  20260714_0001_create_system_checks.py  20260714_0002_add_source_registration.py  20260714_0003_add_csv_profiling.py  20260714_0004_add_governance.py  20260714_0005_add_raw_and_staging_ingestion.py  20260714_0006_add_canonical_financial_model.py  20260714_0007_add_generated_business_sources.py  20260715_0008_add_controlled_messy_data.py  20260715_0009_add_validation_engine.py  20260717_0012_add_unified_exception_management.py  240ac0e252e1_add_bank_ledger_reconciliation.py  76d9d3c52a31_add_payroll_group_version.py  adc0bcae911e_add_invoice_collections_reconciliation.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/cli/: __init__.py  bootstrap_canonical.py  bootstrap_demo_environment.py  export_ar_aging.py  generate_demo_sources.py  generate_messy_dataset.py  ingest_source_file.py  (+31 more)
backend/tests/: conftest.py  test_api.py  test_csv_profiling.py  test_database.py  test_demo_environment.py  test_file_services.py  test_generation.py  test_governance.py  test_ingestion.py  test_invoice_collections_reconciliation.py  test_messy_generation.py  test_normalization.py  test_payroll_reconciliation.py  test_reconciliation.py  test_settings.py  test_source_files_api.py  test_validation_engine.py
(+277 files in other folders)
