[project]
name = "cfo-financial-data-pipeline-backend"
version = "0.1.0"
description = "Phase 1 API foundation for the CFO Financial Data Pipeline Demo"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["psycopg.*"]
ignore_missing_imports = true
